# antigen

./: .gitignore  CHANGELOG.md  LICENSE  README.md  antigen.cabal  cabal.project  flake.nix
bench/: Main.hs
src/Test/: AntiGen.hs
src/Test/AntiGen/: Internal.hs
test/: Main.hs
