cabal-version:      3.0
name:               antigen
version:            0.1.0.0
synopsis:           Negatable QuickCheck generators 
-- description:
license:            MIT
license-file:       LICENSE
author:             Joosep Jääger
maintainer:         joosep.jaager@iohk.io
-- copyright:
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  
      Test.AntiGen
      Test.AntiGen.Internal
    build-depends:    
      base ^>=4.20.2.0,
      free,
      mtl,
      random,
      QuickCheck,
      quickcheck-transformer,
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite antigen-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
      base ^>=4.20.2.0,
      antigen,
      hspec,
      QuickCheck,
      quickcheck-transformer,
