cabal-version:      3.0
name:               antigen
version:            0.1.2.0
synopsis:           Negatable QuickCheck generators 
description:
  AntiGen is a library that helps with generating negative examples from a 
  QuickCheck generator. The `AntiGen` monad is designed to be similar to the
  `Gen` monad, so that migrating the generators would be as frictionless as 
  possible.
license:            MIT
license-file:       LICENSE
author:             IOG Ledger Team
maintainer:         hackage@iohk.io
copyright:          2026 Input Output Global Inc (IOG)
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/input-output-hk/antigen

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  
      Test.AntiGen
      Test.AntiGen.Internal
    build-depends:    
      base >=4.18 && <5,
      QuickCheck >= 2.16.0 && < 2.18,
      free >= 5.2 && < 5.3,
      mtl >= 2.3.1 && < 2.4,
      quickcheck-transformer >= 0.3.1 && < 0.4,
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite antigen-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
      base ^>=4.20.2.0,
      antigen,
      hspec,
      QuickCheck,
      quickcheck-transformer,

benchmark bench
  import: warnings
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: bench
  default-language: Haskell2010
  build-depends:
    antigen,
    base,
    criterion,
    QuickCheck,
    quickcheck-transformer,
