cabal-version:      3.0
name:               antigen
version:            0.3.0.1
synopsis:           Fault injection for QuickCheck
description:
  AntiGen extends QuickCheck to allow injecting random faults into QuickCheck 
  generators.
  It introduces the `AntiGen` monad, a drop-in replacement for `Gen` that allows 
  developers to define negative generators alongside their standard 
  positive generators.
license:            MIT
license-file:       LICENSE
author:             IOG Ledger Team
maintainer:         hackage@iohk.io
copyright:          2026 Input Output Global Inc (IOG)
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md, README.md
tested-with:        GHC == 9.10.3

source-repository head
  type: git
  location: https://github.com/input-output-hk/antigen

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  
      Test.AntiGen
      Test.AntiGen.Internal
    build-depends:    
      base >=4.18 && <5,
      QuickCheck >= 2.7 && < 2.18,
      free >= 5.2 && < 5.3,
      mtl >= 2.3.1 && < 2.4,
      random >= 1.2 && < 1.4,
      quickcheck-transformer >= 0.3.1 && < 0.4,
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite antigen-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
      base,
      antigen,
      hspec,
      QuickCheck,
      quickcheck-transformer,

benchmark bench
  import: warnings
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: bench
  default-language: Haskell2010
  build-depends:
    antigen,
    base,
    criterion,
    QuickCheck,
    quickcheck-transformer,
